--- a/Project/SubscribeViewController.xib
+++ b/Project/SubscribeViewController.xib
@@ -8,6 +8,7 @@
             <connections>
                 <outlet property="activityIndicator" destination="csi-WW-l5h" id="mNw-qe-h5T"/>
                 <outlet property="errorMessage" destination="Uwy-fD-aS8" id="VmV-Hn-0Q9"/>
+                <outlet property="subscribeButton" destination="lf7-D6-aNs" id="Vlj-PW-PYP"/>
                 <outlet property="userFirstname" destination="wIc-mn-ocX" id="K91-jM-RH7"/>
                 <outlet property="userMail" destination="k1B-Yb-wXZ" id="IVj-ex-s7r"/>
                 <outlet property="userName" destination="tfI-lx-G7U" id="DKy-bE-FfF"/>
